
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


typedef size_t uint32 ;
struct TYPE_4__ {int modifiers; unsigned int scancode; int member_1; int member_0; } ;
typedef TYPE_1__ key_translation ;


 size_t KEYMAP_MASK ;
 int MapInhibitMask ;
 void* MapLeftShiftMask ;
 int MapLocalStateMask ;
 unsigned int ShiftMask ;
 TYPE_1__* keymap ;
 scalar_t__ keymap_loaded ;
 unsigned int min_keycode ;

key_translation
xkeymap_translate_key(uint32 keysym, unsigned int keycode, unsigned int state)
{
 key_translation tr = { 0, 0 };

 tr = keymap[keysym & KEYMAP_MASK];

 if (tr.modifiers & MapInhibitMask)
 {

  tr.scancode = 0;
  return tr;
 }

 if (tr.modifiers & MapLocalStateMask)
 {


  if (state & ShiftMask)
  {
   tr.modifiers = MapLeftShiftMask;
  }
 }

 if (tr.scancode != 0)
 {
  return tr;
 }

 if (keymap_loaded)



 if ((keycode >= min_keycode) && (keycode <= 0x60))
 {
  tr.scancode = keycode - min_keycode;




  if (state & ShiftMask)
  {
   tr.modifiers = MapLeftShiftMask;
  }


 }
 else
 {

 }

 return tr;
}
